{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 5,
  "lineage": "ea3cff3c-e1a1-de48-18d2-6b311db531a4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_nic",
      "provider": "provider.azurerm"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public_nic",
      "provider": "provider.azurerm"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_web",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/139c48a9-aa7e-4313-9aff-6966aa3269c9/resourceGroups/Muthu-VM/providers/Microsoft.Network/networkSecurityGroups/Demo-Terraform-Web-NSG",
            "location": "centralus",
            "name": "Demo-Terraform-Web-NSG",
            "resource_group_name": "Muthu-VM",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.demo_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraform_nsg_db",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/139c48a9-aa7e-4313-9aff-6966aa3269c9/resourceGroups/Muthu-VM/providers/Microsoft.Network/networkSecurityGroups/Demo-Terraform-DB-NSG",
            "location": "centralus",
            "name": "Demo-Terraform-DB-NSG",
            "resource_group_name": "Muthu-VM",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMySQL",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "BlockInternet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.demo_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo_pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/139c48a9-aa7e-4313-9aff-6966aa3269c9/resourceGroups/Muthu-VM/providers/Microsoft.Network/publicIPAddresses/Demo-Terraform-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.43.237.147",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "Demo-Terraform-PIP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "Muthu-VM",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.demo_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo_subnet_1",
      "provider": "provider.azurerm"
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo_subnet_2",
      "provider": "provider.azurerm"
    }
  ]
}